Dice evaluator (#140)
* basis

* extend commands and fix tests

* cleanup & metrics

* update readme

* tests

* tests

* tests and lib upgrade

* tests and lib upgrade

* tests and lib upgrade

* jda version

* small improvements

* fix test