@@ -10,7 +10,10 @@ import de.janno.discord.bot.command.AbstractCommand;
 import de.janno.discord.bot.command.ButtonIdLabelAndDiceExpression;
 import de.janno.discord.bot.command.ConfigAndState;
 import de.janno.discord.bot.command.State;
-import de.janno.discord.bot.dice.DiceParserHelper;
+import de.janno.discord.bot.dice.Dice;
+import de.janno.discord.bot.dice.DiceParser;
+import de.janno.discord.bot.dice.DiceParserSystem;
+import de.janno.discord.bot.dice.DiceSystemAdapter;
 import de.janno.discord.bot.persistance.Mapper;
 import de.janno.discord.bot.persistance.MessageDataDAO;
 import de.janno.discord.bot.persistance.MessageDataDTO;
@@ -22,6 +25,8 @@ import de.janno.discord.connector.api.message.EmbedDefinition;
 import de.janno.discord.connector.api.message.MessageDefinition;
 import de.janno.discord.connector.api.slash.CommandDefinitionOption;
 import de.janno.discord.connector.api.slash.CommandInteractionOption;
+import de.janno.evaluator.dice.NumberSupplier;
+import de.janno.evaluator.dice.RandomNumberSupplier;
 import lombok.NonNull;
 import lombok.Value;
 import lombok.extern.slf4j.Slf4j;
@@ -37,25 +42,28 @@ public class SumCustomSetCommand extends AbstractCommand<SumCustomSetConfig, Sum
     private static final String COMMAND_NAME = "sum_custom_set";
     private static final String ROLL_BUTTON_ID = "roll";
     private static final String NO_ACTION = "no action";
+    private static final String LEGACY_START_ACTION = "legacy_start";
+    private static final String BUTTONS_COMMAND_OPTIONS_ID = "buttons";
+    private static final String ALWAYS_SUM_RESULTS_COMMAND_OPTIONS_ID = "always_sum_result";
     private static final String EMPTY_MESSAGE = "Click the buttons to add dice to the set and then on Roll";
     private static final String EMPTY_MESSAGE_LEGACY = "Click on the buttons to add dice to the set";
     private static final String CLEAR_BUTTON_ID = "clear";
     private static final String BACK_BUTTON_ID = "back";
-    private static final List<String> DICE_COMMAND_OPTIONS_IDS = IntStream.range(1, 22).mapToObj(i -> i + "_button").toList();
+    private static final List<String> LEGACY_DICE_COMMAND_OPTIONS_IDS = IntStream.range(1, 22).mapToObj(i -> i + "_button").toList();
     private static final String INVOKING_USER_NAME_DELIMITER = "\u2236 ";
     private static final String LABEL_DELIMITER = "@";
     private static final String CONFIG_TYPE_ID = "SumCustomSetConfig";
     private static final String STATE_DATA_TYPE_ID = "SumCustomSetStateData";
-    private final DiceParserHelper diceParserHelper;
+    private final DiceSystemAdapter diceSystemAdapter;
 
     public SumCustomSetCommand(MessageDataDAO messageDataDAO) {
-        this(messageDataDAO, new DiceParserHelper());
+        this(messageDataDAO, new DiceParser(), new RandomNumberSupplier());
     }
 
     @VisibleForTesting
-    public SumCustomSetCommand(MessageDataDAO messageDataDAO, DiceParserHelper diceParserHelper) {
+    public SumCustomSetCommand(MessageDataDAO messageDataDAO, Dice dice, NumberSupplier numberSupplier) {
         super(messageDataDAO);
-        this.diceParserHelper = diceParserHelper;
+        this.diceSystemAdapter = new DiceSystemAdapter(numberSupplier, 1000, dice);
     }
 
     @Override
@@ -95,7 +103,7 @@ public class SumCustomSetCommand extends AbstractCommand<SumCustomSetConfig, Sum
                 Optional.ofNullable(loadedStateData).map(SumCustomSetStateData::getDiceExpressions).orElse(ImmutableList.of()),
                 invokingUserName,
                 Optional.ofNullable(loadedStateData).map(SumCustomSetStateData::getLockedForUserName).orElse(""),
-                loadedConfig.getLabelAndExpression());
+                loadedConfig.getLabelAndExpression(), loadedConfig.getDiceParserSystem());
         return new ConfigAndState<>(messageDataDTO.getConfigUUID(), loadedConfig, updatedState);
     }
 
@@ -118,7 +126,7 @@ public class SumCustomSetCommand extends AbstractCommand<SumCustomSetConfig, Sum
     @Override
     protected @NonNull EmbedDefinition getHelpMessage() {
         return EmbedDefinition.builder()
-                .description("Creates up to 22 buttons with custom dice expression, that can be combined afterwards. e.g. '/sum_custom_set start 1_button:3d6 2_button:10d10 3_button:3d20'. \n" + DiceParserHelper.HELP)
+                .description("Creates buttons with custom dice expression components, that can be combined afterwards. e.g. '/sum_custom_set start buttons:+;1d6;1;2;3'. \n" + diceSystemAdapter.getHelpText(DiceParserSystem.DICEROLL_PARSER))
                 .build();
     }
 
@@ -127,38 +135,53 @@ public class SumCustomSetCommand extends AbstractCommand<SumCustomSetConfig, Sum
         return COMMAND_NAME;
     }
 
-
     @Override
     protected @NonNull Optional<String> getStartOptionsValidationMessage(@NonNull CommandInteractionOption options) {
-        List<String> diceExpressionWithOptionalLabel = DICE_COMMAND_OPTIONS_IDS.stream()
-                .flatMap(id -> options.getStringSubOptionWithName(id).stream())
+        List<String> diceExpressionWithOptionalLabel = getButtonsFromCommandInteractionOption(options).stream()
+                .map(ButtonIdAndExpression::getExpression)
                 .distinct()
                 .collect(Collectors.toList());
-        String expressionsWithMultiRoll = diceExpressionWithOptionalLabel.stream()
-                .filter(s -> s.contains("x["))
-                .collect(Collectors.joining(","));
-        if (!Strings.isNullOrEmpty(expressionsWithMultiRoll)) {
-            return Optional.of(String.format("This command doesn't support multiple rolls, the following expression are not allowed: %s", expressionsWithMultiRoll));
-        }
-        String expressionWithUserNameDelimiter = diceExpressionWithOptionalLabel.stream()
-                .filter(s -> s.contains(INVOKING_USER_NAME_DELIMITER))
-                .collect(Collectors.joining(","));
-        if (!Strings.isNullOrEmpty(expressionWithUserNameDelimiter)) {
-            return Optional.of(String.format("This command doesn't allow '%s' in the dice expression and label, the following expression are not allowed: %s", INVOKING_USER_NAME_DELIMITER, expressionWithUserNameDelimiter));
-        }
-        int maxCharacter = 2000; //2000 is the max message length
-        return diceParserHelper.validateListOfExpressions(diceExpressionWithOptionalLabel, LABEL_DELIMITER, BottomCustomIdUtils.CUSTOM_ID_DELIMITER, "/sum_custom_set help", maxCharacter);
+        DiceParserSystem diceParserSystem = options.getName().equals(LEGACY_START_ACTION) ? DiceParserSystem.DICEROLL_PARSER : DiceParserSystem.DICE_EVALUATOR;
+        return diceSystemAdapter.validateListOfExpressions(diceExpressionWithOptionalLabel, "/sum_custom_set help", diceParserSystem);
     }
 
     @Override
     protected @NonNull List<CommandDefinitionOption> getStartOptions() {
-        return DICE_COMMAND_OPTIONS_IDS.stream()
-                .map(id -> CommandDefinitionOption.builder()
-                        .name(id)
-                        .description("xdy for a set of x dice with y sides, e.g. '3d6'")
+        return List.of(CommandDefinitionOption.builder()
+                        .name(BUTTONS_COMMAND_OPTIONS_ID)
+                        .description("Define one or more buttons separated by ';'")
                         .type(CommandDefinitionOption.Type.STRING)
-                        .build())
-                .collect(Collectors.toList());
+                        .required(true)
+                        .build(),
+                CommandDefinitionOption.builder()
+                        .name(ALWAYS_SUM_RESULTS_COMMAND_OPTIONS_ID)
+                        .description("Always sum the results of the dice expressions")
+                        .type(CommandDefinitionOption.Type.BOOLEAN)
+                        .required(false)
+                        .build());
+    }
+
+
+    @Override
+    protected Collection<CommandDefinitionOption> additionalCommandOptions() {
+        return List.of(CommandDefinitionOption.builder()
+                .name(LEGACY_START_ACTION)
+                .description("Old start command")
+                .type(CommandDefinitionOption.Type.SUB_COMMAND)
+                .options(LEGACY_DICE_COMMAND_OPTIONS_IDS.stream()
+                        .map(id -> CommandDefinitionOption.builder()
+                                .name(id)
+                                .description("xdy for a set of x dice with y sides, e.g. '3d6'")
+                                .type(CommandDefinitionOption.Type.STRING)
+                                .build())
+                        .collect(Collectors.toList()))
+                .option(ANSWER_TARGET_CHANNEL_COMMAND_OPTION)
+                .build());
+    }
+
+    @Override
+    protected Set<String> getStartOptionIds() {
+        return Set.of(ACTION_START, LEGACY_START_ACTION);
     }
 
     @Override
@@ -174,14 +197,15 @@ public class SumCustomSetCommand extends AbstractCommand<SumCustomSetConfig, Sum
                 .filter(ld -> ld.getButtonId().equals(state.getButtonValue()))
                 .map(ButtonIdLabelAndDiceExpression::getLabel)
                 .findFirst().orElse(null);
-        return Optional.of(diceParserHelper.roll(combineExpressions(state.getData().getDiceExpressions()), label));
+
+        return Optional.of(diceSystemAdapter.answerRollWithGivenLabel(combineExpressions(state.getData().getDiceExpressions()), label, config.isAlwaysSumResult(), config.getDiceParserSystem()));
     }
 
     @Override
     public @NonNull MessageDefinition createNewButtonMessage(SumCustomSetConfig config) {
         return MessageDefinition.builder()
                 .content(EMPTY_MESSAGE)
-                .componentRowDefinitions(createButtonLayout(config))
+                .componentRowDefinitions(createButtonLayout(config, true))
                 .build();
     }
 
@@ -193,10 +217,19 @@ public class SumCustomSetCommand extends AbstractCommand<SumCustomSetConfig, Sum
                 .orElse(false)) {
             return Optional.of(MessageDefinition.builder()
                     .content(EMPTY_MESSAGE)
-                    .componentRowDefinitions(createButtonLayout(config))
+                    .componentRowDefinitions(createButtonLayout(config, true))
                     .build());
         }
         return Optional.empty();
+    }
+
+    @Override
+    protected Optional<List<ComponentRowDefinition>> getCurrentMessageComponentChange(SumCustomSetConfig config, State<SumCustomSetStateData> state) {
+        if (state.getData() == null) {
+            return Optional.empty();
+        }
+        String expression = combineExpressions(state.getData().getDiceExpressions());
+        return Optional.of(createButtonLayout(config, !diceSystemAdapter.isValidExpression(expression, config.getDiceParserSystem())));
     }
 
     @Override
@@ -230,24 +263,21 @@ public class SumCustomSetCommand extends AbstractCommand<SumCustomSetConfig, Sum
         return new SumCustomSetConfig(answerTargetChannelId, event.getAllButtonIds().stream()
                 .filter(lv -> !ImmutableSet.of(ROLL_BUTTON_ID, CLEAR_BUTTON_ID, BACK_BUTTON_ID).contains(BottomCustomIdUtils.getButtonValueFromLegacyCustomId(lv.getCustomId())))
                 .map(lv -> new ButtonIdLabelAndDiceExpression(buttonIds.pop(), lv.getLabel(), BottomCustomIdUtils.getButtonValueFromLegacyCustomId(lv.getCustomId())))
-                .collect(Collectors.toList()));
+                .collect(Collectors.toList()), DiceParserSystem.DICEROLL_PARSER, true);
     }
 
     private State<SumCustomSetStateData> updateStateWithButtonValue(@NonNull final String buttonValue,
                                                                     @NonNull final List<String> currentExpressions,
                                                                     @NonNull final String invokingUserName,
                                                                     @Nullable final String lockedToUser,
-                                                                    @NonNull final List<ButtonIdLabelAndDiceExpression> buttonIdLabelAndDiceExpressions) {
+                                                                    @NonNull final List<ButtonIdLabelAndDiceExpression> buttonIdLabelAndDiceExpressions,
+                                                                    @NonNull final DiceParserSystem diceParserSystem) {
         String currentExpression = combineExpressions(currentExpressions);
         if (CLEAR_BUTTON_ID.equals(buttonValue)) {
             return new State<>(buttonValue, new SumCustomSetStateData(ImmutableList.of(), null));
         }
         if (!Strings.isNullOrEmpty(lockedToUser) && !lockedToUser.equals(invokingUserName)) {
             return new State<>(NO_ACTION, new SumCustomSetStateData(currentExpressions, lockedToUser));
-        }
-        if (!currentExpressions.isEmpty() && !diceParserHelper.validExpression(currentExpression)) {
-            //invalid expression -> clear
-            return new State<>(NO_ACTION, new SumCustomSetStateData(ImmutableList.of(), null));
         }
         if (BACK_BUTTON_ID.equals(buttonValue)) {
             final List<String> newExpressionList;
@@ -259,6 +289,11 @@ public class SumCustomSetCommand extends AbstractCommand<SumCustomSetConfig, Sum
             return new State<>(buttonValue, new SumCustomSetStateData(newExpressionList, newExpressionList.isEmpty() ? null : lockedToUser));
         }
         if (ROLL_BUTTON_ID.equals(buttonValue)) {
+            if (!diceSystemAdapter.isValidExpression(currentExpression, diceParserSystem)) {
+                //should not happen, button only enabled if expression is valid
+                log.error("Roll button pressed but expression is not valid: {}", currentExpression);
+                return new State<>(NO_ACTION, new SumCustomSetStateData(currentExpressions, lockedToUser));
+            }
             return new State<>(buttonValue, new SumCustomSetStateData(currentExpressions, lockedToUser));
         }
         final Optional<String> addExpression = buttonIdLabelAndDiceExpressions.stream()
@@ -273,34 +308,11 @@ public class SumCustomSetCommand extends AbstractCommand<SumCustomSetConfig, Sum
                 .add(addExpression.get())
                 .build();
 
-        if (!Strings.isNullOrEmpty(combineExpressions(expressionWithNewValue)) && !diceParserHelper.validExpression(combineExpressions(expressionWithNewValue))) {
-            //invalid expression -> clear
-            return new State<>(NO_ACTION, new SumCustomSetStateData(ImmutableList.of(), null));
-        }
         return new State<>(buttonValue, new SumCustomSetStateData(expressionWithNewValue, invokingUserName));
     }
 
     private String combineExpressions(List<String> expressions) {
-        String expressionBuilder = "";
-        for (String currentExpression : expressions) {
-            String operator = "+";
-            final String buttonValueWithoutOperator;
-            if (currentExpression.startsWith("-")) {
-                operator = "-";
-                buttonValueWithoutOperator = currentExpression.substring(1);
-            } else if (currentExpression.startsWith("+")) {
-                buttonValueWithoutOperator = currentExpression.substring(1);
-            } else {
-                buttonValueWithoutOperator = currentExpression;
-            }
-
-            if (Strings.isNullOrEmpty(expressionBuilder)) {
-                expressionBuilder = operator.equals("-") ? String.format("-%s", buttonValueWithoutOperator) : buttonValueWithoutOperator;
-            } else {
-                expressionBuilder = String.format("%s%s%s", expressionBuilder, operator, buttonValueWithoutOperator);
-            }
-        }
-        return expressionBuilder;
+        return String.join("", expressions);
     }
 
     @Override
@@ -330,19 +342,36 @@ public class SumCustomSetCommand extends AbstractCommand<SumCustomSetConfig, Sum
                     .map(ButtonIdLabelAndDiceExpression::getButtonId)
                     .findFirst().orElse("");
         }
-        return updateStateWithButtonValue(buttonId, currentExpression, event.getInvokingGuildMemberName(), lockedToUser, config.getLabelAndExpression());
+        return updateStateWithButtonValue(buttonId, currentExpression, event.getInvokingGuildMemberName(), lockedToUser, config.getLabelAndExpression(), config.getDiceParserSystem());
     }
 
     @Override
     protected @NonNull SumCustomSetConfig getConfigFromStartOptions(@NonNull CommandInteractionOption options) {
-        return getConfigOptionStringList(DICE_COMMAND_OPTIONS_IDS.stream()
-                .flatMap(id -> options.getStringSubOptionWithName(id).stream()
-                        .map(e -> new ButtonIdAndExpression(id, e)))
-                .collect(Collectors.toList()), getAnswerTargetChannelIdFromStartCommandOption(options).orElse(null));
+        List<ButtonIdAndExpression> buttons = getButtonsFromCommandInteractionOption(options);
+        boolean alwaysSumResults = options.getBooleanSubOptionWithName(ALWAYS_SUM_RESULTS_COMMAND_OPTIONS_ID).orElse(true);
+        DiceParserSystem diceParserSystem = LEGACY_START_ACTION.equals(options.getName()) ? DiceParserSystem.DICEROLL_PARSER : DiceParserSystem.DICE_EVALUATOR;
+        Long answerTargetChannelId = getAnswerTargetChannelIdFromStartCommandOption(options).orElse(null);
+        return getConfigOptionStringList(buttons, answerTargetChannelId, diceParserSystem, alwaysSumResults);
+    }
+
+    private List<ButtonIdAndExpression> getButtonsFromCommandInteractionOption(@NonNull CommandInteractionOption options) {
+        if (LEGACY_START_ACTION.equals(options.getName())) {
+            return LEGACY_DICE_COMMAND_OPTIONS_IDS.stream()
+                    .flatMap(id -> options.getStringSubOptionWithName(id).stream()
+                            .map(e -> new ButtonIdAndExpression(id, e)))
+                    .toList();
+        }
+        ImmutableList.Builder<ButtonIdAndExpression> builder = ImmutableList.builder();
+        String buttons = options.getStringSubOptionWithName(BUTTONS_COMMAND_OPTIONS_ID).orElseThrow();
+        int idCounter = 1;
+        for (String button : buttons.split(";")) {
+            builder.add(new ButtonIdAndExpression(idCounter++ + "_button", button));
+        }
+        return builder.build();
     }
 
     @VisibleForTesting
-    SumCustomSetConfig getConfigOptionStringList(List<ButtonIdAndExpression> startOptions, Long answerTargetChannelId) {
+    SumCustomSetConfig getConfigOptionStringList(List<ButtonIdAndExpression> startOptions, Long answerTargetChannelId, DiceParserSystem diceParserSystem, boolean alwaysSumResult) {
         return new SumCustomSetConfig(answerTargetChannelId, startOptions.stream()
                 .filter(be -> !be.getExpression().contains(BottomCustomIdUtils.CUSTOM_ID_DELIMITER))
                 .filter(be -> !be.getExpression().contains(LABEL_DELIMITER) || be.getExpression().split(LABEL_DELIMITER).length == 2)
@@ -356,7 +385,8 @@ public class SumCustomSetCommand extends AbstractCommand<SumCustomSetConfig, Sum
                     } else {
                         diceExpression = be.getExpression().trim();
                     }
-                    if (!diceExpression.startsWith("+") && !diceExpression.startsWith("-")) {
+                    if (!diceExpression.startsWith("+") && !diceExpression.startsWith("-")
+                            && diceParserSystem == DiceParserSystem.DICEROLL_PARSER) {
                         diceExpression = "+" + diceExpression;
                     }
                     if (label == null) {
@@ -366,14 +396,20 @@ public class SumCustomSetCommand extends AbstractCommand<SumCustomSetConfig, Sum
                 })
                 .filter(s -> !s.getDiceExpression().isEmpty())
                 .filter(s -> !s.getLabel().isEmpty())
-                .filter(lv -> diceParserHelper.validExpression(lv.getDiceExpression()))
+                .filter(lv -> {
+                    if (DiceParserSystem.DICEROLL_PARSER == diceParserSystem) {
+                        return diceSystemAdapter.isValidExpression(lv.getDiceExpression(), diceParserSystem);
+                    }
+                    return true;
+                })
                 .filter(s -> s.getLabel().length() <= 80) //https://discord.com/developers/docs/interactions/message-components#buttons
                 .distinct()
                 .limit(22)
-                .collect(Collectors.toList()));
+                .collect(Collectors.toList()),
+                diceParserSystem, alwaysSumResult);
     }
 
-    private List<ComponentRowDefinition> createButtonLayout(SumCustomSetConfig config) {
+    private List<ComponentRowDefinition> createButtonLayout(SumCustomSetConfig config, boolean rollDisabled) {
         List<ButtonDefinition> buttons = config.getLabelAndExpression().stream()
                 .map(d -> ButtonDefinition.builder()
                         .id(BottomCustomIdUtils.createButtonCustomId(getCommandId(), d.getButtonId()))
@@ -383,7 +419,8 @@ public class SumCustomSetCommand extends AbstractCommand<SumCustomSetConfig, Sum
         buttons.add(ButtonDefinition.builder()
                 .id(BottomCustomIdUtils.createButtonCustomId(getCommandId(), ROLL_BUTTON_ID))
                 .label("Roll")
-                .style(ButtonDefinition.Style.SUCCESS)
+                .disabled(rollDisabled)
+                .style(rollDisabled ? ButtonDefinition.Style.PRIMARY : ButtonDefinition.Style.SUCCESS)
                 .build());
         buttons.add(ButtonDefinition.builder()
                 .id(BottomCustomIdUtils.createButtonCustomId(getCommandId(), CLEAR_BUTTON_ID))
